--- a/src/assets/base/baseFormBody.less
+++ b/src/assets/base/baseFormBody.less
@@ -4,19 +4,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   background-color: var(--td-bg-color-container);
   // padding: 0 32px 134px;
 
   @media (max-width: @screen-sm-max) {
     padding: 0 32px 67px;
+  }
 
-    .form-basic-container-title {
-      margin: 12px 0 12px;
-    }
+  .form-basic-container-title {
+    margin: 12px 0 12px;
   }
 
   .form-basic-item {
-    width: 80%;
+    width: 90%;
+
+    .row-col-item{
+      padding: 5px !important;
+    }
 
     .form-basic-container-title {
       font-size: 20px;
